# homework_9-web-

./: README.md  authors.json  hw.py  hw9_BS.py  models.py  pyproject.toml  search_quotes.py
