[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["SashaKuspys <134163412+SashaKuspys@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"
mongoengine = "^0.27.0"
redis = "^5.0.1"
redis-lru = "^0.1.2"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
scrapy = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
